--- a/README
+++ b/README
@@ -3,7 +3,7 @@ README for pyui generator
 
 Main author: elmamyra
 
-pyui generator lets you easily and quickly convert files Qt Disigner files (.ui) 
+pyui generator lets you easily and quickly convert Qt Disigner files (.ui) 
 to python files for use with pyside or pyqt.
 python files can be generated manually or synchronized with Qt designer files.
 it uses commands pyside-uic, pyside-rcc (for pyside) and pyuic4, pyrcc4 (for pyqt)
